--- a/tp1/node/package.json
+++ b/tp1/node/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "artillery": "artillery"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "artillery": "^1.6.0-15",
+    "express": "^4.16.3"
+  }
 }
