--- a/tp1/nginx.conf
+++ b/tp1/nginx.conf
@@ -45,7 +45,7 @@ http {
             index  index.html index.htm;
         }
 
-        location /node {
+        location /node/ {
             proxy_pass http://node_app/;
         }
 
