[Untested, unfinished] Dockerize

--- a/tp1/docker/nginx/nginx.conf
+++ b/tp1/docker/nginx/nginx.conf
@@ -24,16 +24,16 @@ http {
     #gzip  on;
     upstream node_app {
         server localhost:3000;
-        server localhost:3001;
+        #server localhost:3001;
     }
 
     upstream python_app {
         server localhost:8000;
-        server localhost:8001;
+        #server localhost:8001;
     }
 
     server {
-        listen       8080;
+        listen       80;
         server_name  localhost;
 
         #charset koi8-r;
