Funcionando node app, no se si lo que hice esta bien, pero funciona

--- a/tp1/docker-compose.yml
+++ b/tp1/docker-compose.yml
@@ -16,7 +16,7 @@ services:
             context: .
             dockerfile: node-express.dockerfile
         volumes:
-            - ./js/src:/app/src
+            - ./js:/app
         links:
             - grafana
         command: npm run start
