--- a/tp1/nginx_reverse_proxy.conf
+++ b/tp1/nginx_reverse_proxy.conf
@@ -2,6 +2,12 @@ upstream node {
     server node:3000;
 }
 
+upstream gunicorn_replicated {
+    server tp1_n-gunicorn_1:8000;
+    server tp1_n-gunicorn_2:8000;
+    server tp1_n-gunicorn_3:8000;
+}
+
 upstream node_replicated {
     server node:3000;
     #server tparqdocker_node_2:3000;
@@ -23,5 +29,9 @@ server {
 
     location /gunicorn/ {
         proxy_pass http://gunicorn/;
+    }
+
+    location /gunicorn_replicated/ {
+        proxy_pass http://gunicorn_replicated/;
     }
 }
