Creo que arregle el problema de docker compose con node.js

--- a/tp1/docker-compose.yml
+++ b/tp1/docker-compose.yml
@@ -26,7 +26,7 @@ services:
             context: .
             dockerfile: node-express.dockerfile
         volumes:
-            - ./js:/app
+            - ./js/src:/app/src
         links:
             - grafana
         command: npm run start
