--- a/tp1/docker-compose.yml
+++ b/tp1/docker-compose.yml
@@ -56,6 +56,7 @@ services:
         ports:
             - "5555:80"
         volumes:
+            - ./nginx_main_workers_config.conf:/etc/nginx/nginx.conf:ro
             - ./nginx_reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
             - ./store/static/files:/static:ro
         links:
