1 app gunicorn con 5 workers

--- a/tp1/nginx_reverse_proxy.conf
+++ b/tp1/nginx_reverse_proxy.conf
@@ -18,6 +18,10 @@ upstream gunicorn {
     server gunicorn:8000;
 }
 
+upstream worker-gunicorn {
+    server tp1_w-gunicorn_1:8000;
+}
+
 server {
     location /node/ {
         proxy_pass http://node/;
@@ -33,5 +37,9 @@ server {
 
     location /gunicorn_replicated/ {
         proxy_pass http://gunicorn_replicated/;
+    }
+
+    location /worker-gunicorn/ {
+        proxy_pass http://worker-gunicorn/;
     }
 }
