--- a/tp1/nginx_reverse_proxy.conf
+++ b/tp1/nginx_reverse_proxy.conf
@@ -22,6 +22,11 @@ upstream worker-gunicorn {
     server tp1_w-gunicorn_1:8000;
 }
 
+upstream cluster-node {
+    server tp1_cluser-node_1:8000;
+}
+
+
 server {
     location /node/ {
         proxy_pass http://node/;
@@ -41,5 +46,9 @@ server {
 
     location /worker-gunicorn/ {
         proxy_pass http://worker-gunicorn/;
+    }
+
+    location /cluster-node/ {
+        proxy_pass http://cluster-node/;
     }
 }
