--- a/tp1/perf/test.yaml
+++ b/tp1/perf/test.yaml
@@ -28,6 +28,13 @@ config:
           host: localhost
           port: 8125
           prefix: "artillery-w-gunicorn"
+    cluster-node:
+      target: 'http://localhost:5555/cluster-node/'
+      plugins:
+        statsd:
+          host: localhost
+          port: 8125
+          prefix: "artillery-cluster-node"
 
   pool: 50 # All HTTP requests from all virtual users will be sent over the same connections
 
