--- a/tp1/nginx_reverse_proxy.conf
+++ b/tp1/nginx_reverse_proxy.conf
@@ -3,9 +3,10 @@ upstream node {
 }
 
 upstream gunicorn_replicated {
-    server tp1_n-gunicorn_1:8000;
-    server tp1_n-gunicorn_2:8000;
-    server tp1_n-gunicorn_3:8000;
+    server gunicorn:8000;
+    #server tp1_n-gunicorn_1:8000;
+    #server tp1_n-gunicorn_2:8000;
+    #server tp1_n-gunicorn_3:8000;
 }
 
 upstream node_replicated {
@@ -26,6 +27,13 @@ upstream cluster-node {
     server tp1_cluser-node_1:8000;
 }
 
+upstream multiple {
+    server tp1_nw-gunicorn_1:8000;
+    server tp1_nw-gunicorn_2:8000;
+    server tp1_nw-gunicorn_3:8000;
+    server tp1_nw-gunicorn_4:8000;
+    server tp1_nw-gunicorn_5:8000;
+}
 
 server {
     location /node/ {
@@ -50,5 +58,9 @@ server {
 
     location /cluster-node/ {
         proxy_pass http://cluster-node/;
+    }
+
+    location /multiple/ {
+        proxy_pass http://multiple/;
     }
 }
