--- a/tp1/docker-compose.yml
+++ b/tp1/docker-compose.yml
@@ -64,6 +64,8 @@ services:
             - n-gunicorn
             - node
             - node-cluster
+            - n-gunicorn
+
 
     graphite:
         image: graphiteapp/graphite-statsd:1.1.3
