Agrego codigo en py y js para descargar ok.gif, add yaml artillery

--- a/tp1/perf/03_image.yaml
+++ b/tp1/perf/03_image.yaml
@@ -1,40 +1,26 @@
 config:
   environments:
     gunicorn:
-      target: 'http://localhost:5555/gunicorn/'
+      target: 'http://localhost:5555/gunicorn'
       plugins:
         statsd:
           host: localhost
           port: 8125
           prefix: "artillery-gunicorn"
-    n-gunicorn:
-      target: 'http://localhost:5555/gunicorn_replicated/'
-      plugins:
-        statsd:
-          host: localhost
-          port: 8125
-          prefix: "artillery-n-gunicorn"
-    w-gunicorn:
-      target: 'http://localhost:5555/gunicorn_worker/'
-      plugins:
-        statsd:
-          host: localhost
-          port: 8125
-          prefix: "artillery-w-gunicorn"
     node:
-      target: 'http://localhost:5555/node/'
+      target: 'http://localhost:5555/node/src/ok.gif'
       plugins:
         statsd:
           host: localhost
           port: 8125
           prefix: "artillery-node"
-    node-cluster:
-      target: 'http://localhost:5555/node_cluster/'
+    n-gunicorn:
+      target: 'http://localhost:5555/gunicorn_replicated'
       plugins:
         statsd:
           host: localhost
           port: 8125
-          prefix: "artillery-node-cluster"
+          prefix: "artillery-n-gunicorn"
 
   pool: 50 # All HTTP requests from all virtual users will be sent over the same connections
 
@@ -48,4 +34,4 @@ scenarios:
   - name: Root (/)
     flow:
       - get:
-          url: ''
+          url: '/get_image'
