--- a/tp1/perf/03_image.yaml
+++ b/tp1/perf/03_image.yaml
@@ -8,7 +8,7 @@ config:
           port: 8125
           prefix: "artillery-gunicorn"
     node:
-      target: 'http://localhost:5555/node/src/ok.gif'
+      target: 'http://localhost:5555/node/src'
       plugins:
         statsd:
           host: localhost
@@ -30,8 +30,14 @@ config:
       duration: 60
       arrivalRate: 1000
 
+#scenarios:
+#  - name: Root (/)
+#    flow:
+#      - get:
+#          url: '/get_image'
+
 scenarios:
   - name: Root (/)
     flow:
       - get:
-          url: '/get_image'
+          url: '/ok.jpeg'
