--- a/tp1/nginx_reverse_proxy.conf
+++ b/tp1/nginx_reverse_proxy.conf
@@ -1,18 +1,7 @@
-upstream node {
-    server node:3000;
-}
-
 upstream gunicorn_replicated {
-    server gunicorn:8000;
-    #server tp1_n-gunicorn_1:8000;
-    #server tp1_n-gunicorn_2:8000;
-    #server tp1_n-gunicorn_3:8000;
-}
-
-upstream node_replicated {
-    server node:3000;
-    #server tparqdocker_node_2:3000;
-    #server tparqdocker_node_3:3000;
+    server tp1_n-gunicorn_1:8000;
+    server tp1_n-gunicorn_2:8000;
+    server tp1_n-gunicorn_3:8000;
 }
 
 upstream gunicorn {
@@ -20,28 +9,20 @@ upstream gunicorn {
 }
 
 upstream worker-gunicorn {
-    server tp1_w-gunicorn_1:8000;
+    server w-gunicorn:8000;
+}
+
+upstream node {
+    server node:3000;
 }
 
 upstream cluster-node {
-    server tp1_cluser-node_1:8000;
-}
-
-upstream multiple {
-    server tp1_nw-gunicorn_1:8000;
-    server tp1_nw-gunicorn_2:8000;
-    server tp1_nw-gunicorn_3:8000;
-    server tp1_nw-gunicorn_4:8000;
-    server tp1_nw-gunicorn_5:8000;
+    server cluster-node:3000;
 }
 
 server {
     location /node/ {
         proxy_pass http://node/;
-    }
-
-    location /node_replicated/ {
-        proxy_pass http://node_replicated/;
     }
 
     location /gunicorn/ {
@@ -58,9 +39,5 @@ server {
 
     location /cluster-node/ {
         proxy_pass http://cluster-node/;
-    }
-
-    location /multiple/ {
-        proxy_pass http://multiple/;
     }
 }
