--- a/tp1/nginx_reverse_proxy.conf
+++ b/tp1/nginx_reverse_proxy.conf
@@ -1,14 +1,14 @@
+upstream gunicorn {
+    server gunicorn:8000;
+}
+
 upstream gunicorn_replicated {
     server tp1_n-gunicorn_1:8000;
     server tp1_n-gunicorn_2:8000;
     server tp1_n-gunicorn_3:8000;
 }
 
-upstream gunicorn {
-    server gunicorn:8000;
-}
-
-upstream worker-gunicorn {
+upstream gunicorn_worker {
     server w-gunicorn:8000;
 }
 
@@ -16,15 +16,11 @@ upstream node {
     server node:3000;
 }
 
-upstream cluster-node {
-    server cluster-node:3000;
+upstream node_cluster {
+    server node-cluster:3000;
 }
 
 server {
-    location /node/ {
-        proxy_pass http://node/;
-    }
-
     location /gunicorn/ {
         proxy_pass http://gunicorn/;
     }
@@ -33,11 +29,15 @@ server {
         proxy_pass http://gunicorn_replicated/;
     }
 
-    location /worker-gunicorn/ {
-        proxy_pass http://worker-gunicorn/;
+    location /gunicorn_worker/ {
+        proxy_pass http://gunicorn_worker/;
     }
 
-    location /cluster-node/ {
-        proxy_pass http://cluster-node/;
+    location /node/ {
+        proxy_pass http://node/;
+    }
+
+    location /node_cluster/ {
+        proxy_pass http://node_cluster/;
     }
 }
